--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 
 
 <div class="container text-center">
- <button class="btn btn" href="https://portfolio-kappa-rust-34.vercel.app/">Clique em  meu Portfolio!</button>
+ <button class="btn btn" routerLink="/portfolio">Clique em  meu Portfolio!
+  <a href="https://portfolio-kappa-rust-34.vercel.app/">Aqui!</a>
+ </button>
 
 </div>
   <!-- Content here -->
